<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aemacc13.picturematchinggame.GameFragment">

    <include layout="@layout/badges"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/win"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/big_win_text"
                android:text="@string/congratulations"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_win_text"
                android:text="@string/play_again"/>

            <Button
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:text="@string/yes"
                style="@style/MenuButton"/>
            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:text="@string/no"
                style="@style/MenuButton"/>
        </LinearLayout>



        <include
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/picture_grid"/>

        <LinearLayout
            android:id="@+id/previous_count_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/default_text"
                android:text="@string/previous"/>

            <TextView
                android:id="@+id/previous_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="@dimen/default_text"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/count_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/default_text"
                android:text="@string/count"/>

            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="@dimen/default_text"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
